--- a/CollegeSchedule/.env
+++ b/CollegeSchedule/.env
@@ -1,6 +1,5 @@
-﻿namespace CollegeSchedule
-{
-    public class _
-    {
-    }
-}
+﻿DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=natk-shedule
+DB_USER=postgres
+DB_PASSWORD=Andreyka1775
